Name:          ivar-simple
Version:       0.0.0.0
Category:      Concurrency
Stability:     experimental
Copyright:     (c) 2008, 2009 Bertram Felgenhauer
Maintainer:    Bertram Felgenhauer <int-e@gmx.de>
License:       BSD3
License-File:  LICENSE
Synopsis:      Write once concurrency primitives.
Description:
  @IVar@s are write-once variables.
  .
  They can be read, an operation that will block until a value was written
  to the variable. They can be written to exactly once.
Cabal-Version: >= 1.4
Build-Type:    Simple

Library
    HS-Source-Dirs:     src
    Exposed-Modules:    Data.IVar, Data.IChan, Data.MIChan
    Build-Depends:      base
    if impl(ghc <= 6.10.1)
        GHC-Options:        -fno-state-hack
